# airstatus

./: README.md  airpods.py  pyproject.toml
