[project]
name = "airstatus"
version = "0.1.0"
description = "A modern CLI tool for monitoring AirPods battery status"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
dependencies = ["bleak>=0.19.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/hikaary/airstatus"
Repository = "https://github.com/hikaary/airstatus.git"
